--- a/platformio.ini
+++ b/platformio.ini
@@ -21,7 +21,7 @@
 ;espressif32 @ 5.1.0 ; - works but no solo
 
 [platformio]
-default_envs = prod-solo
+default_envs = prod-esp32dev
 
 [env]
 framework = arduino
@@ -66,6 +66,22 @@ board_build.f_cpu = 160000000L
 extra_scripts = 
 	${env.extra_scripts}
 
+[env:prod-esp32dev]
+platform = https://github.com/tasmota/platform-espressif32/releases/download/2023.07.00/platform-espressif32.zip
+board = esp32dev
+build_flags = 
+	${env.build_flags}
+extra_scripts = 
+	${env.extra_scripts}
+
+[env:debug-esp32dev]
+platform = https://github.com/tasmota/platform-espressif32/releases/download/2023.07.00/platform-espressif32.zip
+board = esp32dev
+build_flags = 
+	-DDEBUG
+	${env.build_flags}
+extra_scripts = 
+	${env.extra_scripts}
 
 [env:prod]
 platform = espressif32 @ 6.4.0
